--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@actions/core": "^1.11.1",
+    "@aws-sdk/client-ssm": "^3.859.0",
     "flagsmith-nodejs": "^6.1.0"
   }
 }
