shortened descriptions in action.yaml for Github Marketplace release

--- a/action.yaml
+++ b/action.yaml
@@ -1,7 +1,6 @@
 name: flagsmith_to_paramstore
 author: Golos1
 description: Reads a feature flag from flagsmith and puts an AWS parameter with the same name and value in AWS Parameter store.
-  As a matter of best practices, AWS credentials are fetched from the environment rather than supplied as arguments.
 inputs:
   FLAG_NAME:
     description: name of feature flag on flagsmith
@@ -11,8 +10,7 @@ outputs:
   FLAG_VALUE:
     description: value of the feature flag fetched from flagsmith. Will not be set if the flag doesn't exist or can't be retreived.
   PARAM_VERSION:
-    description: version number obtained from AWS after setting the parameter. Will not be set
-      if AWS does not send back a version number for whatever reason.
+    description: version number obtained from AWS after setting the parameter, if returned by AWS.
 runs:
   using: node20
   main: ./index.js
